correcting alignment on projects page

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
    }
 
    #nameheader-p {
-       margin-top: .52%;
+       margin-top: .50%;
        text-align: center;
        width: 100%;
        font-weight: bold font-family: 'Goudy Old Style', Garamond, 'Big Caslon', 'Times New Roman', serif;
